--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </div>
     </div>
 
-    <!-- ROW 1 -->
+    <!-- ROW 1 : WBSPM9C55BE698960 -->
     <div class="table-row">
 
         <!-- Status -->
@@ -97,9 +97,30 @@
             WBSPM9C55BE698960
         </div>
 
-        <!-- Packages -->
+        <!-- Packages (with big red tooltip) -->
         <div class="cell cell-packages">
-            ZCP ZP2 2MK 403 465 494 609 655 6FL 6NR 752
+            <div class="tooltip tooltip-packages">
+                <span class="packages-short">
+                    ZCP ZP2 2MK 403 465 494 609 655 6FL 6NR 752
+                </span>
+
+                <div class="tooltiptext tooltip-packages-content">
+                    <div>MSRP - $55,900.00</div>
+                    <div>ZCP - Competition Package - $2,500.00</div>
+                    <div>ZP2 - Premium Package 2 - $2,500.00 | 4MY - Carbon Leather Interior Trim</div>
+                    <div>2MK - M Double-Clutch Transmission - $2,900.00</div>
+                    <div>403 - Moonroof - $1,050.00</div>
+                    <div>465 - Split-Fold Down Rear Seat - $475.00</div>
+                    <div>494 - Heated Front Seats - $500.00</div>
+                    <div>609 - Navigation System - $2,150.00</div>
+                    <div>655 - Satellite Radio - $350.00</div>
+                    <div>6FL - iPod &amp; USB Adapter - $400.00</div>
+                    <div>6NR - BMW Apps - $250.00</div>
+                    <div>752 - Enhanced Premium Sound - $1,900.00</div>
+                    <div>DC - Destination Charge - $875.00</div>
+                    <div>GZ - Gas Guzzler Tax - $1,300.00</div>
+                </div>
+            </div>
         </div>
 
         <!-- Price -->
